<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".fragments.SignUpOne">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/fragment_padding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/fragment_padding"
                android:paddingBottom="@dimen/fragment_padding">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bna_text_logo"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margins"
                    android:text="@string/login_signup_link"
                    android:textColor="@color/app_light_blue_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margins"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <ImageView
                        android:id="@+id/step_circle_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/step_filed_circle" />

                    <ImageView
                        android:id="@+id/step_circle_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_margins"
                        android:layout_marginEnd="@dimen/view_margins"
                        android:layout_weight="1"
                        android:src="@drawable/step_empty_circle" />

                    <ImageView
                        android:id="@+id/step_circle_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/step_empty_circle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/common_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_name_edittext"
                    app:layout_constraintBottom_toTopOf="@+id/signup_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <EditText
                    android:id="@+id/signup_name"
                    style="@style/common_edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signup_name_hint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/common_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/family_name_edittext"
                    app:layout_constraintBottom_toTopOf="@+id/signup_family_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_name" />

                <EditText
                    android:id="@+id/signup_family_name"
                    style="@style/common_edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signup_familyname_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/common_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/cin_edittext"
                    app:layout_constraintBottom_toTopOf="@+id/signup_confirm_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_family_name" />

                <EditText
                    android:id="@+id/signup_confirm_password"
                    style="@style/common_edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/signup_cin_hint"
                    android:inputType="number"
                    android:maxLength="8"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/common_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/full_address_edittext"
                    app:layout_constraintBottom_toTopOf="@+id/signup_full_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password" />

                <EditText
                    android:id="@+id/signup_full_address"
                    style="@style/common_edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signup_fulladdress_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/common_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_edittext"
                    app:layout_constraintBottom_toTopOf="@+id/signup_mobile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_full_address" />

                <EditText
                    android:id="@+id/signup_mobile"
                    style="@style/common_edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margins"
                    android:ems="10"
                    android:hint="@string/signup_mobile_hint"
                    android:inputType="phone"
                    android:maxLength="8"
                    app:layout_constraintBottom_toTopOf="@+id/register_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <Button
                    android:id="@+id/register_button"
                    style="@style/common_green_gradient_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/buttons_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="@dimen/view_constraints_horizental_margins"
                    android:layout_marginBottom="@dimen/view_margins"
                    android:background="@drawable/green_button_states"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:enabled="false"
                    android:paddingStart="@dimen/edit_text_padding"
                    android:paddingEnd="@dimen/edit_text_padding"
                    android:text="@string/next_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/signup_one_previous_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/signup_one_previous_btn"
                    app:layout_constraintTop_toTopOf="@+id/signup_one_previous_btn" />

                <Button
                    android:id="@+id/signup_one_previous_btn"
                    style="@style/common_green_gradient_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/buttons_height"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/green_button_states"
                    android:drawableStart="@drawable/ic_baseline_chevron_left_24"
                    android:paddingStart="@dimen/edit_text_padding"
                    android:paddingEnd="@dimen/edit_text_padding"
                    android:text="@string/previous_btn_label"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toStartOf="@+id/register_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_mobile" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>